--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.5",
     "redux-thunk": "^3.1.0",
-    "sass": "^1.83.4"
+    "sass": "^1.83.4",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
