--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "react",
   "private": true,
+  "homepage": "https://github.com/olakola1/react",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "start": "react-scripts start",
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -31,6 +36,7 @@
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
@@ -47,4 +53,5 @@
       "prettier --write"
     ]
   }
+
 }
