Исправлена конфигурация для Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,13 @@
 {
   "routes": [
     {
-      "src": "/.*",
+      "src": "/assets/(.*)",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/(.*)",
       "dest": "/index.html"
     }
   ]
