--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,12 @@
       }
     },
     {
+      "src": "/img/(.*)",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
