--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: recipes-backend
     runtime: node
     buildCommand: cd server && npm install && npm run build
-    startCommand: node dist/server.js  # Запускаем собранный файл из dist
+    startCommand: cd server && node dist/server.js
     envVars:
       - key: DATABASE_URL
         fromDatabase:
