--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "type": "commonjs",
   "scripts": {
     "dev": "nodemon --exec ts-node src/app.ts",
-    "start": "node dist/app.js",
+    "start": "node dist/server.js",
     "build": "tsc"
   },
   "dependencies": {
