--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,9 @@
 {
   "type": "commonjs",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/app.ts",
+    "dev": "nodemon -r dotenv/config src/app.ts dotenv_config_path=.env.development",
     "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "node -r dotenv/config dist/app.js dotenv_config_path=.env.production"
   },
   "dependencies": {
     "body-parser": "^2.2.0",
