--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,11 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "moduleResolution": "node",
-    "types": ["node"]
+    "types": ["node", "express", "cors", "pg"],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types",
+      ]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
