--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "type": "commonjs",
   "scripts": {
     "dev": "nodemon -r dotenv/config src/app.ts dotenv_config_path=.env.development",
-    "build": "tsc",
+    "build": "npm install --include=dev && tsc",
     "start": "node -r dotenv/config dist/app.js dotenv_config_path=.env.production"
   },
   "dependencies": {
@@ -14,9 +14,7 @@
     "mongoose": "^8.16.0",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
-  },
-  "devDependencies": {
+    "sequelize": "^6.37.7",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^4.17.23",
@@ -29,3 +27,4 @@
     "typescript": "^5.0.4"
   }
 }
+
