--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
-  "main": "dist/server.js",
+  "main": "server/dist/server.js",
   "type": "commonjs",
   "scripts": {
     "dev": "nodemon -r dotenv/config src/server.ts dotenv_config_path=.env.development",
     "build": "npm install --include=dev && tsc",
-    "start": "node -r dotenv/config dist/server.ts dotenv_config_path=.env.production"
+    "start": "node -r dotenv/config server/dist/server.js dotenv_config_path=.env.production"
   },
   "dependencies": {
     "body-parser": "^2.2.0",
