--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,8 @@ services:
   - type: web
     name: recipes-backend
     runtime: node
-    buildCommand: |
-      npm install
-      npm run build
-    startCommand: |
-      npm start
+    buildCommand: npm install
+    startCommand: npm start
     envVars:
       - key: DATABASE_URL
         fromDatabase:
