--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,13 @@ services:
   - type: web
     name: recipes-backend
     runtime: node
-    buildCommand: npm install
-    startCommand: npm start
+    buildCommand: |
+      cd server && 
+      npm install && 
+      npm run build
+    startCommand: |
+      cd server && 
+      node dist/server.js
     envVars:
       - key: DATABASE_URL
         fromDatabase:
