--- a/server/docker/docker-compose.yml
+++ b/server/docker/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       retries: 5
 
   server:
-    build: ./server
+    build: ..
     container_name: recipe_server
     ports:
       - "5000:5000"
