--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "main": "server/dist/server.js",
   "type": "commonjs",
   "scripts": {
-    "dev": "nodemon -r dotenv/config src/server.ts dotenv_config_path=.env.development",
+    "dev": "nodemon -r dotenv/config src/server.ts dotenv_config_path=.env",
     "build": "npm install --include=dev && tsc",
     "start": "node -r dotenv/config server/dist/server.js dotenv_config_path=.env.production"
   },
@@ -11,7 +11,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "mongoose": "^8.16.0",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
